--- a/app/src/main/res/layout/activity_sponser_register.xml
+++ b/app/src/main/res/layout/activity_sponser_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".sponserRegister">
+    tools:context=".ui.sponserRegister">
     <ScrollView android:id="@+id/sponser_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
