--- a/app/src/main/res/layout/dash_event_card.xml
+++ b/app/src/main/res/layout/dash_event_card.xml
@@ -54,7 +54,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
                             <TextView android:gravity="center_horizontal"
-                                android:id="@+id/txtArmanrokni"
+                                android:id="@+id/eventDateTv"
                                 android:layout_height="match_parent"
                                 android:layout_marginBottom="@dimen/_6pxv"
                                 android:layout_marginEnd="@dimen/_9pxh"
@@ -68,7 +68,7 @@
                         </LinearLayout>
                         <ImageButton
                             android:background="@drawable/rectangle_bg_white_a700_b2_radius_10"
-                            android:id="@+id/btnMap"
+                            android:id="@+id/btnWatchlistEvent"
                             android:layout_height="@dimen/_30pxh"
                             android:layout_marginBottom="@dimen/_15pxv"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
 
             <TextView android:ellipsize="end"
                 android:gravity="center_horizontal"
-                android:id="@+id/event_layout_title"
+                android:id="@+id/eventTitleTv"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_16pxh"
                 android:layout_marginStart="@dimen/_16pxh"
@@ -98,14 +98,14 @@
                 style="@style/txtAirbnbCerealAppmedium18_1"/>
 
             <TextView android:ellipsize="end"
-                android:id="@+id/event_layout_participants"
+                android:id="@+id/eventParticipantsTv"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_16pxh"
                 android:layout_marginStart="@dimen/_16pxh"
                 android:layout_marginTop="@dimen/_6pxv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/event_layout_title"
+                app:layout_constraintTop_toBottomOf="@id/eventTitleTv"
                 android:layout_width="wrap_content"
                 android:lineSpacingExtra="@dimen/_4pxh"
                 android:singleLine="true"
@@ -113,7 +113,7 @@
                 style="@style/txtAirbnbCerealAppmedium12"/>
 
             <LinearLayout android:gravity="start"
-                android:id="@+id/location_Wrap"
+                android:id="@+id/eventLocationlayout"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_10pxv"
                 android:layout_marginEnd="@dimen/_16pxh"
@@ -121,7 +121,7 @@
                 android:layout_marginTop="@dimen/_6pxv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/event_layout_participants"
+                app:layout_constraintTop_toBottomOf="@id/eventParticipantsTv"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="wrap_content" android:orientation="horizontal">
                 <ImageView android:id="@+id/imageMappin"
@@ -132,7 +132,7 @@
                     android:src="@drawable/img_mappin"
                     tools:ignore="ContentDescription" tools:src="@drawable/img_mappin"/>
                 <TextView android:ellipsize="end"
-                    android:id="@+id/txtLanguage"
+                    android:id="@+id/eventLocationTv"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_7pxh"
                     android:layout_marginTop="@dimen/_1pxv"
