--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/page_explore"
         android:enabled="true"
-        android:icon="@drawable/baseline_explore_24"
+        android:icon="@drawable/baseline_dashboard_24"
         android:title="Explore" />
 
     <item
@@ -20,8 +20,8 @@
     <item
         android:id="@+id/page_map"
         android:enabled="true"
-        android:icon="@drawable/img_eye"
-        android:title="Map"/>
+        android:icon="@drawable/baseline_explore_24"
+        android:title="Explore"/>
 
     <item
         android:id="@+id/page_profile"
