--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -51,7 +51,7 @@
                 android:drawableStart="@drawable/department_24"
                 android:ellipsize="end"
                 android:hint="Event Name"
-                android:id="@+id/stu_name"
+                android:id="@+id/eve_name_edt"
                 android:inputType="text"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_11pxv"
@@ -69,9 +69,9 @@
                 android:drawablePadding="@dimen/_16pxh"
                 android:drawableStart="@drawable/img_user"
                 android:ellipsize="end"
-                android:hint="Organizer"
-                android:id="@+id/stu_net_id"
-                android:inputType="text"
+                android:hint="Organizer Contact"
+                android:id="@+id/eve_contact_edt"
+                android:inputType="phone"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20pxv"
                 android:layout_width="match_parent"
@@ -89,6 +89,7 @@
                 android:drawableStart="@drawable/img_mappin"
                 android:ellipsize="end"
                 android:hint="Location"
+                android:id="@+id/eve_venue_edt"
                 android:inputType="textPostalAddress"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20pxv"
@@ -99,6 +100,27 @@
                 android:paddingStart="@dimen/_18pxh"
                 android:paddingTop="@dimen/_18pxv"
                 android:singleLine="true"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/baseline_description_24"
+                android:ellipsize="end"
+                android:hint="About Event"
+                android:id="@+id/eve_info_edt"
+                android:inputType="textPostalAddress"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:maxLines="3"
+                android:minLines="2"
                 android:textColorHint="@color/gray_600"
                 style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
 
