--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -124,6 +124,28 @@
                 android:textColorHint="@color/gray_600"
                 style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
 
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/baseline_description_24"
+                android:ellipsize="end"
+                android:hint="Event type"
+                android:id="@+id/eve_type_edt"
+                android:inputType="textPostalAddress"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:maxLines="3"
+                android:minLines="2"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+
+            <!--
             <TextView
                 android:drawablePadding="@dimen/_16pxh"
                 android:gravity="center_vertical"
@@ -166,12 +188,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:id="@+id/radia_id3"
-                    android:text="Cultural"
+                    android:text="Fest"
                     android:textSize="14sp"
                     android:fontFamily="@font/comfortaa"/>
 
             </RadioGroup>
-
+            -->
             <TextView
                 android:drawablePadding="@dimen/_16pxh"
                 android:gravity="center_vertical"
@@ -190,7 +212,7 @@
                 android:weightSum="2"
                 android:orientation="horizontal">
                 <Button
-                    android:id="@+id/idBtnPickTime"
+                    android:id="@+id/eve_time_btn"
                     android:layout_width="0dp"
                     android:layout_weight="0.9"
                     android:layout_height="wrap_content"
@@ -203,7 +225,7 @@
                     android:text="HH:MM"
                     android:textAllCaps="false" />
                 <Button
-                    android:id="@+id/idBtnPickDate"
+                    android:id="@+id/eve_date_btn"
                     android:layout_width="0dp"
                     android:layout_weight="1.1"
                     android:layout_height="wrap_content"
